--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: right;
 }
 
 .voice-widget.color2 {
